style : fixed nav and footer link issues on mobile screens.

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ hr {
 
 .list-item-inline {
   display: inline;
-  padding: 0rem 1rem;
+  /* padding: 0rem 1rem; */
 }
 
 /* navigation */
